--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>jexbox-play</artifactId>
   <version>0.0.1</version>
   <packaging>jar</packaging>
-  <name>Jexbox Play! Framework Connector</name>
+  <name>Jexbox Play! Framework Connector Plugin</name>
   <description>Jexbox Play! Framework connector hooks as ExceptionHandler, so any uncaught exceptions in your Play! application will be sent to your Jexbox database. The connector extracts complete exception stack trace, including nested exceptions, error message and system properties and page/component traces</description>
   <url>http://jexbox.com/connectors</url>
   <licenses>
